--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
 					<tr>
 						<th>
 							<i class style="position:absolute"></i>
-							Id
+							<%= link_to 'Id', posts_path(:sort => 'id') %>
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
@@ -25,47 +25,62 @@
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=user.gender" style>Gender</a>
+							Gender
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=user.major" style>Major</a>
+							Major
+						</th>
+						<% if current_user.admin? %>
+						<th>
+							<i class style="position:absolute"></i>
+							Email
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=arrival_date" style>Arrival date</a>
+							Phone
+						</th>
+						<% end %>
+						<th>
+							<i class style="position:absolute"></i>
+							<%= link_to 'Need airport pickup?', posts_path(:sort => 'need_pickup')%>
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=arrival_time" style>Arrival time</a>
+							<%= link_to 'Need temp housing?', posts_path(:sort => 'need_housing')%>
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=flight_number" style>Flight number</a>
+							<%= link_to 'Arrival date', posts_path(:sort => 'arrival_date')%>
+						</th>
+						<th>
+							<i class style="position:absolute"></i>
+						    Arrival time
+						</th>
+						<th>
+							<i class style="position:absolute"></i>
+						    Port of Entry
+						</th>
+						<th>
+							<i class style="position:absolute"></i>
+						    Flight number
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
 							Number of people
 						</th>
-						<th>
-							<i class style="position:absolute"></i>
-							<a href="/posts?order=need_pickup" style>Need airport pickup?</a>
-						</th>
-						<th>
-							<i class style="position:absolute"></i>
-							<a href="/posts?order=need_housing" style>Need temp housing?</a>
-						</th>
+						
 						<th>
 							<i class style="position:absolute"></i>
 							Notes
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=status" style>Pickup status</a>
+							<%= link_to 'Pickup status', posts_path(:sort => 'status')%>
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=temp_housing" style>Temp housing status</a>
+							Temp housing arrangement
 						</th>
 					</tr>
 				</tread>
